# vaarna

./: .editorconfig  .env.development  .eslintrc.js  .gitignore  .npmrc  Dockerfile  Makefile  README.md  cdk.json  docker-compose.yaml  go.mod  go.sum  jest.config.js  mypy.ini  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.json  tsconfig.next.json  tsconfig.package.json  turbo.json
.github/: dependabot.yaml
backend/: app.py  interface.go  pyproject.toml
backend/gm_screen/: __init__.py  __main__.py  app.py  assets.py  config.py  dynamo.py  notify.py
backend/gm_screen/model/: __init__.py  asset.py  asset_db.py  asset_db_test.py  notifier.py  table_db.py  table_db_test.py
backend/gm_screen/router/: __init__.py  assets.py  notify.py  table.py
backend/gm_screen/tests/: fixtures.py
cdk/: data.ts  index.ts  tsconfig.json
components/: Button.module.css  Button.tsx
e2e/: navigation.spec.ts  upload.spec.ts  util.ts
frontend/: .babelrc  index.html  jest.config.js  package.json  rollup.config.js  setup_tests.js  styles.scss  tsconfig.json  uploader.jsx
gm_screen/: app.py  assets.py  config.py
infra/: cdk.json  index.ts  infra.ts  package.json
pages/: _app.module.css  _app.tsx  _document.tsx  about.tsx  index.tsx  sheet.tsx  table.module.css  table.tsx
script/: create-dev.sh
scripts/: create-dev.sh
server/: index.ts
src/: api.ts  config.ts  globalStyle.ts  logger.ts  render.test.ts  render.ts  select.ts  store.ts  store.tsx  thunk.ts
styles/: _all.scss  index.scss  master.css  reset.css  variables.scss
test/: navigation.spec.ts  util.ts  (+2 more)
(+360 files in other folders)
