[tool.poetry]
name = "gm-screen"
version = "0.1.0"
description = ""
authors = ["Maximilian Remming <maximilian@remming.fi>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.12.2"
fastapi = "^0.61.2"
pydantic = "^1.7.2"
python-multipart = "^0.0.5"
aiofiles = "^0.6.0"
boto3 = "^1.16.18"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
isort = "^5.6.4"
mypy = "^0.790"
pyflakes = "^2.2.0"
uvicorn = {extras = ["standard"], version = "^0.12.2"}

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
